--- a/app/views/entries.ejs
+++ b/app/views/entries.ejs
@@ -1,14 +1,30 @@
 <div id="entries" class="sections">
     <h1>Ingresos de mercadería</h1>
     <!-- Entries options -->
-    <div class="row">
-        <div class="col">
-            <a id="upload-excel-file" href="/entries/upload">Subir un archivo Excel</a>
+    <div class="entries-wrapper">
+        <div class="row">
+            <div class="col">
+                <a id="upload-excel-file" href="/entries/upload">
+                    <div class="left-header link-top">
+                        <h2>SUBIR .XLSX</h2>
+                    </div>
+                    <div class="left-body link-body">
+                        <img src="/images/svg/entries/upload-icon.svg" alt="upload XLSX icon">
+                    </div>
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <a id="genereate-excel-file" href="/entries/generate">Generar un archivo Excel</a>
+        <div class="row">
+            <div class="col">
+                <a id="genereate-excel-file" href="/entries/generate">
+                    <div class="right-header link-top">
+                        <h2>CREAR .XLSX</h2>
+                    </div>
+                    <div class="right-body link-body">
+                        <img src="/images/svg/entries/create-icon.svg" alt="create XLSX icon">
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </div>
