--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -488,6 +488,10 @@ table {
     margin-bottom: 40px;
 }
 
+#generatefile .html2excel {
+    padding: 20px 20px 0;
+}
+
 #generatefile .html2excel button {
     width: 100%;
     margin: 10px 0 10px; 
@@ -552,12 +556,14 @@ table {
     max-width: 420px;
     padding-top: 20px;
 }
-#uploadfile .top-header {
+#uploadfile .top-header,
+.generate-wrapper .top-header {
     height: 60px;
     text-align: center;
 }
 
-#uploadfile h2 {
+#uploadfile h2,
+.generate-wrapper h2 {
     margin-top: 18px;
     width: 100%;
 }
@@ -581,21 +587,29 @@ table {
 #uploadfile form {
     margin-top: 40px;
 }
-#uploadfile input[type="submit"] {
+#uploadfile input[type="submit"],
+#generatefile .btn {
     background-color: #99CC33;
     border-color: #99CC33;
     border-radius: 30px;
     width: 90%;
     margin: 10px 10px 0;
     color: #FFFFFF;
+    letter-spacing: 2px;
+}
+#uploadfile input[type="submit"] {
     font-weight: bolder;
     font-size: 16px;
-    letter-spacing: 2px;
 }
 
 #uploadfile input[type="submit"]:hover {
     background-color: #99CC33;
     border-color: #99CC33;
+}
+
+/* Generate file */
+.generate-wrapper {
+    width: 420px;
 }
 
 /* Tracking page */
