--- a/app/views/generatefile.ejs
+++ b/app/views/generatefile.ejs
@@ -135,7 +135,10 @@
         <!-- End wrapper -->
         <!-- Add item form -->
         <div class="add-item-wrapper">
-            <form id="additemform">
+            <div class="top-header green-background white-font-color top-round-borders">
+                <h2>AGREGAR ITEM</h2>
+            </div>
+            <form id="additemform" class="grey-background bottom-round-borders">
                 <div class="form-1">
                     <div class="form-group">
                         <!-- <label for="numnerid">NRO ID</label> -->
